Added Google Search Console verification meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="dPQRGUL1GKSn3hKedje18ALsUjnd1PruHKLbemK4LGg" />
     
     <!-- SEO Meta Tags -->
     <meta name="description" content="Viktor Ciganovic's quiz app is an interactive and fun way to test your knowledge. Explore and challenge yourself with various quizzes designed to help you learn and grow!" />
